Consolidated templates, tested prod certs

--- a/roles/k3s-kubernetes/templates/traefik/letsencrypt_wildcard_cert.yaml.j2
+++ b/roles/k3s-kubernetes/templates/traefik/letsencrypt_wildcard_cert.yaml.j2
@@ -10,4 +10,4 @@ spec:
   dnsNames: {{install.domains}}
   issuerRef:
     kind: ClusterIssuer
-    name: letsencrypt-staging
+    name: {% if k3s.traefik.staging|default(true)|bool == true %}letsencrypt-staging{% else %}letsencrypt-prod{% endif %}
