--- a/roles/k3s-kubernetes/templates/democratic_csi/test-claim-iscsi.yaml.j2
+++ b/roles/k3s-kubernetes/templates/democratic_csi/test-claim-iscsi.yaml.j2
@@ -7,7 +7,7 @@ metadata:
 spec:
   storageClassName: {{install.democratic_csi.iscsi.provisioner}}-csi
   accessModes:
-    - ReadWriteOnce
+    - {{install.democratic_csi.iscsi.test_claim.mode}}
   resources:
     requests:
-      storage: 1Gi
+      storage: {{install.democratic_csi.iscsi.test_claim.size}}
