--- a/roles/k3s-kubernetes/templates/democratic_csi/test-app-nfs-claim.yaml.j2
+++ b/roles/k3s-kubernetes/templates/democratic_csi/test-app-nfs-claim.yaml.j2
@@ -2,47 +2,82 @@
 kind: Deployment
 apiVersion: apps/v1
 metadata:
-  namespace: default
-  name: nginx-pv-deployment
+  name: nginx-pv-green
   labels:
-    app: nginx-pv
+    app: nginx-pv-green
 
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: nginx-pv
+      app: nginx-pv-green
   template:
     metadata:
       labels:
-        app: nginx-pv
+        app: nginx-pv-green
     spec:
       volumes:
-      - name: nginx-pv-storage
+      - name: nginx-pv-storage-green
         persistentVolumeClaim:
-          claimName: test-claim-nfs
+          claimName: test-claim-nfs-green
       initContainers:
-      - name: web-content
+      - name: web-content-green
         image: busybox
         volumeMounts:
         - mountPath: "/webdata"
-          name: nginx-pv-storage
-        command: ["/bin/sh", "-c", 'echo "<h1> Hello <font color=green>World</font></h1>" > /webdata/index.html']
+          name: nginx-pv-storage-green
+        command: ["/bin/sh", "-c", 'echo "<h1> Hello <font color=green>Green World</font></h1>" > /webdata/index.html']
       containers:
-      - name: nginx
+      - name: nginx-green
         image: nginx
         ports:
           - containerPort: 80
         volumeMounts:
           - mountPath: "/usr/share/nginx/html"
-            name: nginx-pv-storage
+            name: nginx-pv-storage-green
+---
+kind: Deployment
+apiVersion: apps/v1
+metadata:
+  name: nginx-pv-blue
+  labels:
+    app: nginx-pv-blue
+
+spec:
+  replicas: 1
+  selector:
+    matchLabels:
+      app: nginx-pv-blue
+  template:
+    metadata:
+      labels:
+        app: nginx-pv-blue
+    spec:
+      volumes:
+      - name: nginx-pv-storage-blue
+        persistentVolumeClaim:
+          claimName: test-claim-nfs-blue
+      initContainers:
+      - name: web-content-blue
+        image: busybox
+        volumeMounts:
+        - mountPath: "/webdata"
+          name: nginx-pv-storage-blue
+        command: ["/bin/sh", "-c", 'echo "<h1> Hello <font color=blue>Blue World</font></h1>" > /webdata/index.html']
+      containers:
+      - name: nginx-blue
+        image: nginx
+        ports:
+          - containerPort: 80
+        volumeMounts:
+          - mountPath: "/usr/share/nginx/html"
+            name: nginx-pv-storage-blue
 
 ---
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: test-claim-nfs
-  namespace: default
+  name: test-claim-nfs-green
   annotations:
     volume.beta.kubernetes.io/storage-class: "freenas-nfs-csi"
 spec:
@@ -51,13 +86,28 @@ spec:
     - ReadWriteOnce
   resources:
     requests:
-      storage: 1Gi
+      storage: 2Mi
+
+---
+apiVersion: v1
+kind: PersistentVolumeClaim
+metadata:
+  name: test-claim-nfs-blue
+  annotations:
+    volume.beta.kubernetes.io/storage-class: "freenas-nfs-csi"
+spec:
+  storageClassName: freenas-nfs-csi
+  accessModes:
+    - ReadWriteOnce
+  resources:
+    requests:
+      storage: 2Mi
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx-pv
+  name: nginx-pv-green
 
 spec:
   ports:
@@ -65,7 +115,21 @@ spec:
       name: web
       port: 80
   selector:
-    app: nginx-pv
+    app: nginx-pv-green
+
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: nginx-pv-blue
+
+spec:
+  ports:
+    - protocol: TCP
+      name: web
+      port: 80
+  selector:
+    app: nginx-pv-blue
 
 ---
 apiVersion: traefik.containo.us/v1alpha1
@@ -82,7 +146,6 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
 metadata:
   name: test-claim-ingressroute
-  namespace: default
 spec:
   entryPoints:
     - web
@@ -92,5 +155,7 @@ spec:
     middlewares:
     - name: nginx-strip-path-prefix
     services:
-    - name: nginx-pv
+    - name: nginx-pv-green
+      port: 80
+    - name: nginx-pv-blue
       port: 80
