--- a/roles/k3s-kubernetes/templates/traefik/traefik_dashboard.yaml.j2
+++ b/roles/k3s-kubernetes/templates/traefik/traefik_dashboard.yaml.j2
@@ -1,3 +1,28 @@
+{% if install.traefik.dashboard.enable_basic_auth|default(false)|bool == true%}
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: dashboard-basic-auth
+  namespace: kube-system
+spec:
+  basicAuth:
+    secret: authsecret
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: authsecret
+  namespace: kube-system
+data:
+  users: |
+{% if install.traefik.dashboard.allowed_users is defined %}{% filter indent(width=4) %}
+    {{install.traefik.dashboard.allowed_users}}{% endfilter %}
+{% else %}
+  MUST_ENCODED_USERS_HERE or to "vars/secrets/k3s_traefik_api_secrets.yml" on Ansible Controller
+{% endif %}{{''}}
+{% endif %}
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
@@ -6,10 +31,14 @@ metadata:
   namespace: kube-system
 spec:
   entryPoints:
-    - {% if install.traefik.dashboard.use_https|default(false)|bool == false %}web{% else %}websecure{% endif %}{{''}}
+    - {% if install.traefik.dashboard.enable_https|default(false)|bool == false %}web{% else %}websecure{% endif %}{{''}}
   routes:
     - match: Host(`{{ansible_fqdn|lower}}`) && (PathPrefix(`/dashboard`) || PathPrefix(`/api`))
       kind: Rule
+{% if install.traefik.dashboard.enable_basic_auth|default(false)|bool == true%}
+      middlewares:
+        - name: dashboard-basic-auth
+{% endif %}
       services:
         - name: api@internal
           kind: TraefikService
