--- a/roles/k3s-kubernetes/templates/prometheus-op/traefik-servicemonitor.yaml.j2
+++ b/roles/k3s-kubernetes/templates/prometheus-op/traefik-servicemonitor.yaml.j2
@@ -11,9 +11,11 @@ metadata:
 spec:
   endpoints:
   - port: metrics
+    path: '/metrics'
   namespaceSelector:
     matchNames:
     - kube-system
   selector:
     matchLabels:
-      app: traefik
+      app.kubernetes.io/instance: traefik
+      app.kubernetes.io/name: traefik
