--- a/roles/k3s-kubernetes/templates/longhorn/longhorn_traefik_ingress_route.yaml.j2
+++ b/roles/k3s-kubernetes/templates/longhorn/longhorn_traefik_ingress_route.yaml.j2
@@ -13,7 +13,6 @@ spec:
       X-Forwarded-Proto: "https"
 
 ---
----
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
@@ -25,6 +24,32 @@ spec:
       - {{install.longhorn.dashboard.path|default("/longhorn")}}
     forceSlash: true
 
+{% if install.longhorn.dashboard.enable_basic_auth|default(false)|bool == true%}
+---
+apiVersion: traefik.containo.us/v1alpha1
+kind: Middleware
+metadata:
+  name: dashboard-basic-auth
+  namespace: {{install.longhorn.namespace}}
+spec:
+  basicAuth:
+    secret: authsecret
+
+---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: authsecret
+  namespace: {{install.longhorn.namespace}}
+data:
+  users: |
+{% if install.longhorn.dashboard.allowed_users is defined %}{% filter indent(width=4) %}
+    {{install.longhorn.dashboard.allowed_users}}{% endfilter %}
+{% else %}
+  MUST_ENCODED_USERS_HERE or to "vars/secrets/longhorn_dashboard_secrets.yml" on Ansible Controller
+{% endif %}{{''}}
+{% endif %}
+
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: IngressRoute
@@ -33,7 +58,7 @@ metadata:
   name: longhorn-ingress-route
 spec:
   entryPoints:
-    - websecure
+    - {% if install.traefik.dashboard.enable_https|default(false)|bool == false %}web{% else %}websecure{% endif %}{{''}}
   routes:
     - match: Host(`{{ansible_fqdn|lower}}`) && (PathPrefix(`{{install.longhorn.dashboard.path|default("/longhorn")}}`))
       kind: Rule
@@ -44,3 +69,6 @@ spec:
       middlewares:
       - name: longhorn-stripprefix
       - name: svc-longhorn-headers
+{% if install.longhorn.dashboard.enable_basic_auth|default(false)|bool == true%}
+      - name: dashboard-basic-auth
+{% endif %}
