Made auth sercret names unique

--- a/templates/longhorn/longhorn_traefik_ingress_route.yaml.j2
+++ b/templates/longhorn/longhorn_traefik_ingress_route.yaml.j2
@@ -33,13 +33,13 @@ metadata:
   namespace: {{install.longhorn.namespace}}
 spec:
   basicAuth:
-    secret: authsecret
+    secret: longhorn-authsecret
 
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: authsecret
+  name: longhorn-authsecret
   namespace: {{install.longhorn.namespace}}
 data:
   users: |
