--- a/templates/traefik/traefik_dashboard.yaml.j2
+++ b/templates/traefik/traefik_dashboard.yaml.j2
@@ -7,13 +7,13 @@ metadata:
   namespace: kube-system
 spec:
   basicAuth:
-    secret: authsecret
+    secret: dashboard-authsecret
 
 ---
 apiVersion: v1
 kind: Secret
 metadata:
-  name: authsecret
+  name: dashboard-authsecret
   namespace: kube-system
 data:
   users: |
