--- a/templates/prometheus-op/chart_values.yaml.j2
+++ b/templates/prometheus-op/chart_values.yaml.j2
@@ -1,5 +1,56 @@
 # Reference: https://github.com/prometheus-community/helm-charts/blob/main/charts/kube-prometheus-stack/values.yaml
 
+kubeApiServer:
+  enabled: true
+
+kubeControllerManager:
+  enabled: true
+  endpoints:
+{% filter indent(width=4) %}{% for IP in controlPlaneIPs.stdout_lines %}
+  - {{IP}}
+{% endfor %}{% endfilter %}
+  service:
+    enabled: true
+    port: 10257
+    targetPort: 10257
+  serviceMonitor:
+    enabled: true
+    https: true
+    insecureSkipVerify: true
+
+kubeScheduler:
+  enabled: true
+  endpoints:
+{% filter indent(width=4) %}{% for IP in controlPlaneIPs.stdout_lines %}
+  - {{IP}}
+{% endfor %}{% endfilter %}
+  service:
+    enabled: true
+    port: 10259
+    targetPort: 10259
+  serviceMonitor:
+    enabled: true
+    https: true
+    insecureSkipVerify: true
+
+kubeProxy:
+  enabled: true
+  endpoints:
+{% filter indent(width=4) %}{% for IP in controlPlaneIPs.stdout_lines %}
+  - {{IP}}
+{% endfor %}{% endfilter %}
+
+kubeEtcd:
+  enabled: true
+  endpoints:
+{% filter indent(width=4) %}{% for IP in controlPlaneIPs.stdout_lines %}
+  - {{IP}}
+{% endfor %}{% endfilter %}
+  service:
+    enabled: true
+    port: 2381
+    targetPort: 2381
+
 prometheus:
   prometheusSpec:
     storageSpec:
