--- a/templates/traefik/cloudflare_api_token_secret.yaml.j2
+++ b/templates/traefik/cloudflare_api_token_secret.yaml.j2
@@ -5,4 +5,4 @@ metadata:
   namespace: cert-manager
 type: Opaque
 stringData:
-  api-token: {{k3s.traefik.le_api_token_name}}
+  api-token: {{traefik.le_api_token_name}}
