--- a/templates/traefik/letsencrypt.yaml.j2
+++ b/templates/traefik/letsencrypt.yaml.j2
@@ -1,14 +1,14 @@
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: {% if k3s.traefik.staging|default(true)|bool == true %}letsencrypt-staging{% else %}letsencrypt-prod{% endif %}{{''}}
+  name: {% if install.traefik.le_staging|default(true)|bool == true %}letsencrypt-staging{% else %}letsencrypt-prod{% endif %}{{''}}
   namespace: cert-manager
 spec:
   acme:
-    email: {{k3s.traefik.le_email_auth}}
-    server: {% if k3s.traefik.staging|default(true)|bool == true %}{{k3s.traefik.le_staging_server}}{% else %}{{k3s.traefik.le_production_server}}{% endif %}{{''}}
+    email: {{traefik.le_email_auth}}
+    server: {% if install.traefik.le_staging|default(true)|bool == true %}{{traefik.le_staging_server}}{% else %}{{traefik.le_production_server}}{% endif %}{{''}}
     privateKeySecretRef:
-      name: issuer-{% if k3s.traefik.staging|default(true)|bool == true %}letsencrypt-staging{% else %}letsencrypt-prod{% endif %}{{''}}
+      name: issuer-{% if install.traefik.le_staging|default(true)|bool == true %}letsencrypt-staging{% else %}letsencrypt-prod{% endif %}{{''}}
     solvers:
     - dns01:
         cloudflare:
