--- a/templates/kube-vip/kube-vip.yaml.j2
+++ b/templates/kube-vip/kube-vip.yaml.j2
@@ -1,7 +1,6 @@
 apiVersion: apps/v1
 kind: DaemonSet
 metadata:
-  creationTimestamp: null
   labels:
     app.kubernetes.io/name: kube-vip-ds
     app.kubernetes.io/version: {{ kube_vip_install_version|default(install.kube_vip.install_version) }}
@@ -13,7 +12,6 @@ spec:
       app.kubernetes.io/name: kube-vip-ds
   template:
     metadata:
-      creationTimestamp: null
       labels:
         app.kubernetes.io/name: kube-vip-ds
         app.kubernetes.io/version: {{ kube_vip_install_version|default(install.kube_vip.install_version) }}
@@ -36,8 +34,9 @@ spec:
           value: "true"
         - name: port
           value: "6443"
+{%- if vip_interface is defined %}{{''}}
         - name: vip_interface
-          value: {{ vip_interface }}
+          value: {{ vip_interface }}{% endif %}{{''}}
         - name: vip_cidr
           value: "32"
         - name: cp_enable
@@ -77,8 +76,3 @@ spec:
       - effect: NoExecute
         operator: Exists
   updateStrategy: {}
-status:
-  currentNumberScheduled: 0
-  desiredNumberScheduled: 0
-  numberMisscheduled: 0
-  numberReady: 0
