Moved LE to Cert-Manager

--- a/templates/cert-manager/cloudflare_api_token_secret.yaml.j2
+++ b/templates/cert-manager/cloudflare_api_token_secret.yaml.j2
@@ -1,8 +1,9 @@
+---
 apiVersion: v1
 kind: Secret
 metadata:
   name: cloudflare-api-token-secret
-  namespace: cert-manager
+  namespace: {{install.cert_manager.namespace}}
 type: Opaque
 stringData:
-  api-token: {{traefik.le_api_token_name}}
+  api-token: {{cert_manager.le_api_token_name}}
