--- a/templates/cert-manager/letsencrypt_dns_cloudflare.yaml.j2
+++ b/templates/cert-manager/letsencrypt_dns_cloudflare.yaml.j2
@@ -1,14 +1,14 @@
+---
 apiVersion: cert-manager.io/v1
 kind: ClusterIssuer
 metadata:
-  name: {% if install.traefik.le_staging|default(true)|bool == true %}letsencrypt-staging{% else %}letsencrypt-prod{% endif %}{{''}}
-  namespace: cert-manager
+  name: {% if install.cert_manager.le_staging|default(true)|bool == true %}letsencrypt-staging{% else %}letsencrypt-prod{% endif %}{{''}}
 spec:
   acme:
-    email: {{traefik.le_email_auth}}
-    server: {% if install.traefik.le_staging|default(true)|bool == true %}{{traefik.le_staging_server}}{% else %}{{traefik.le_production_server}}{% endif %}{{''}}
+    email: {{cert_manager.le_email_auth}}
+    server: {% if install.cert_manager.le_staging|default(true)|bool == true %}{{cert_manager.le_staging_server}}{% else %}{{cert_manager.le_production_server}}{% endif %}{{''}}
     privateKeySecretRef:
-      name: issuer-{% if install.traefik.le_staging|default(true)|bool == true %}letsencrypt-staging{% else %}letsencrypt-prod{% endif %}{{''}}
+      name: issuer-{% if install.cert_manager.le_staging|default(true)|bool == true %}letsencrypt-staging{% else %}letsencrypt-prod{% endif %}{{''}}
     solvers:
     - dns01:
         cloudflare:
