--- a/templates/traefik/traefik_wildcard_cert.yaml.j2
+++ b/templates/traefik/traefik_wildcard_cert.yaml.j2
@@ -3,12 +3,12 @@ apiVersion: cert-manager.io/v1
 kind: Certificate
 metadata:
   name: wildcard-cert
-  namespace: kube-system
+  namespace: {{install.traefik.namespace}}
 spec:
   # Secret names are always required.
   secretName: wildcard-secret
   # At least one of a DNS Name, URI, or IP address is required.
-  dnsNames: {{install.traefik.domains}}
+  dnsNames: {{install.cert_manager.domains}}
   issuerRef:
     kind: ClusterIssuer
-    name: {% if install.traefik.le_staging|default(true)|bool == true %}letsencrypt-staging{% else %}letsencrypt-prod{% endif %}{{''}}
+    name: {% if install.cert_manager.le_staging|default(true)|bool == true %}letsencrypt-staging{% else %}letsencrypt-prod{% endif %}{{''}}
