--- a/templates/traefik/traefik_default_tls_store.yaml.j2
+++ b/templates/traefik/traefik_default_tls_store.yaml.j2
@@ -2,7 +2,7 @@ apiVersion: traefik.containo.us/v1alpha1
 kind: TLSStore
 metadata:
   name: default
-  namespace: kube-system
+  namespace: {{install.traefik.namespace}}
 spec:
   defaultCertificate:
     secretName: wildcard-secret
