--- a/templates/longhorn/longhorn_traefik_ingress_route.yaml.j2
+++ b/templates/longhorn/longhorn_traefik_ingress_route.yaml.j2
@@ -1,4 +1,18 @@
 ---
+apiVersion: v1
+kind: Secret
+metadata:
+  name: longhorn-authsecret
+  namespace: {{install.longhorn.namespace}}
+data:
+  users: |
+{% if install.longhorn.dashboard.allowed_users is defined %}{% filter indent(width=4) %}
+    {{install.longhorn.dashboard.allowed_users}}{% endfilter %}
+{% else %}
+  MUST_ENCODED_USERS_HERE or to "vars/secrets/longhorn_dashboard_secrets.yml" on Ansible Controller
+{% endif %}{{''}}
+
+---
 # Traefik 2.x ingress controller does not set the WebSocket headers
 # https://longhorn.io/kb/troubleshooting-traefik-2.x-as-ingress-controller/
 
@@ -24,31 +38,15 @@ spec:
       - {{install.longhorn.dashboard.path|default("/longhorn")}}
     forceSlash: true
 
-{% if install.longhorn.dashboard.enable_basic_auth|default(false)|bool == true%}
 ---
 apiVersion: traefik.containo.us/v1alpha1
 kind: Middleware
 metadata:
-  name: dashboard-basic-auth
+  name: longhorn-dashboard-basic-auth
   namespace: {{install.longhorn.namespace}}
 spec:
   basicAuth:
     secret: longhorn-authsecret
-
----
-apiVersion: v1
-kind: Secret
-metadata:
-  name: longhorn-authsecret
-  namespace: {{install.longhorn.namespace}}
-data:
-  users: |
-{% if install.longhorn.dashboard.allowed_users is defined %}{% filter indent(width=4) %}
-    {{install.longhorn.dashboard.allowed_users}}{% endfilter %}
-{% else %}
-  MUST_ENCODED_USERS_HERE or to "vars/secrets/longhorn_dashboard_secrets.yml" on Ansible Controller
-{% endif %}{{''}}
-{% endif %}
 
 ---
 apiVersion: traefik.containo.us/v1alpha1
@@ -58,7 +56,7 @@ metadata:
   name: longhorn-ingress-route
 spec:
   entryPoints:
-    - {% if install.traefik.dashboard.enable_https|default(false)|bool == false %}web{% else %}websecure{% endif %}{{''}}
+    - {% if install.longhorn.dashboard.enable_https|default(false)|bool == false %}web{% else %}websecure{% endif %}{{''}}
   routes:
     - match: Host(`{{install.longhorn.dashboard.ingress_name|default(ansible_fqdn)|lower}}`) && (PathPrefix(`{{install.longhorn.dashboard.path|default("/longhorn")}}`))
       kind: Rule
@@ -68,7 +66,14 @@ spec:
         port: 80
       middlewares:
       - name: longhorn-stripprefix
+        namespace: {{install.longhorn.namespace}}
       - name: svc-longhorn-headers
-{% if install.longhorn.dashboard.enable_basic_auth|default(false)|bool == true%}
-      - name: dashboard-basic-auth
+        namespace: {{install.longhorn.namespace}}
+{% if install.longhorn.dashboard.enable_basic_auth|default(false)|bool == true %}
+      - name: longhorn-dashboard-basic-auth
+        namespace: {{install.longhorn.namespace}}
+{% endif %}
+{% if install.longhorn.dashboard.enable_https|default(false)|bool == true %}
+  tls:
+    secretName: wildcard-cert
 {% endif %}
