Changed secret name

--- a/templates/traefik/traefik_default_tls_store.yaml.j2
+++ b/templates/traefik/traefik_default_tls_store.yaml.j2
@@ -5,4 +5,4 @@ metadata:
   namespace: {{install.traefik.namespace}}
 spec:
   defaultCertificate:
-    secretName: wildcard-secret
+    secretName: wildcard-cert
