--- a/templates/kube-vip-cloud-provider/workloads/kube-vip-cloud-provider/base/application/statefulset.yaml.j2
+++ b/templates/kube-vip-cloud-provider/workloads/kube-vip-cloud-provider/base/application/statefulset.yaml.j2
@@ -23,7 +23,7 @@ spec:
       - command:
         - /kube-vip-cloud-provider
         - --leader-elect-resource-name=kube-vip-cloud-controller
-        image: ghcr.io/kube-vip/kube-vip-cloud-provider:v0.0.2
+        image: ghcr.io/kube-vip/kube-vip-cloud-provider:{{ kube_vip_cloud_provider_install_version|default(install.kube_vip.lb.install_version) }}
         name: kube-vip-cloud-provider
         imagePullPolicy: Always
         resources: {}
