--- a/templates/lets-encrypt/applications/lets-encrypt.yaml.j2
+++ b/templates/lets-encrypt/applications/lets-encrypt.yaml.j2
@@ -22,6 +22,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+      selfHeal: false
     syncOptions:
     -  Validate=true
