Changed Secret type

--- a/templates/lets-encrypt/workloads/lets-encrypt/cloudflare_api_token_secret.yaml.j2
+++ b/templates/lets-encrypt/workloads/lets-encrypt/cloudflare_api_token_secret.yaml.j2
@@ -5,5 +5,5 @@ metadata:
   name: cloudflare-api-token-secret
   namespace: {{install.cert_manager.namespace}}
 type: Opaque
-stringData:
-  api-token: {{install.lets_encrypt.le_api_token_name}}
+data:
+  api-token: {{install.lets_encrypt.le_api_token_name | b64encode}}
