Set selfHeal to False for observations

--- a/templates/argocd/git_repo/applications/argocd.yaml.j2
+++ b/templates/argocd/git_repo/applications/argocd.yaml.j2
@@ -26,6 +26,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+      selfHeal: false
     syncOptions:
     -  Validate=true
