--- a/templates/kube-vip-cloud-provider/applications/kube-vip-cloud-provider.yaml.j2
+++ b/templates/kube-vip-cloud-provider/applications/kube-vip-cloud-provider.yaml.j2
@@ -22,6 +22,6 @@ spec:
   syncPolicy:
     automated:
       prune: true
-      selfHeal: true
+      selfHeal: false
     syncOptions:
     -  Validate=true
