Trying to get Secret "atime" difference ignored

--- a/templates/argocd/git_repo/applications/argocd.yaml.j2
+++ b/templates/argocd/git_repo/applications/argocd.yaml.j2
@@ -27,7 +27,8 @@ spec:
     namespace: {{install.argocd.namespace}}
 
   ignoreDifferences:
-  - kind: Secret                              # Secert updates overtime
+  - group: apps
+    kind: Secret                              # Secert updates overtime
     name: argocd-secret
     namespace: {{install.argocd.namespace}}
     jsonPointers:
