Adjusted ArgoCD Sync Wave assignment

--- a/templates/traefik/workloads/traefik-config/traefik_wildcard_cert.yaml.j2
+++ b/templates/traefik/workloads/traefik-config/traefik_wildcard_cert.yaml.j2
@@ -4,6 +4,8 @@ kind: Certificate
 metadata:
   name: wildcard-cert
   namespace: {{install.traefik.namespace}}
+  annotations:
+    argocd.argoproj.io/sync-wave: "1"  # Lower the number the sooner to deploy 
 spec:
   # Secret names are always required.
   secretName: wildcard-cert
