--- a/templates/argocd/git_repo/applications/argocd.yaml.j2
+++ b/templates/argocd/git_repo/applications/argocd.yaml.j2
@@ -27,12 +27,19 @@ spec:
     namespace: {{install.argocd.namespace}}
 
   ignoreDifferences:
-  - group: apps
-    kind: Secret                              # Secert updates overtime
-    name: argocd-secret
-    namespace: {{install.argocd.namespace}}
-    jsonPointers:
-    - /spec/data
+    - group: apps
+      kind: Secret                              # Secert updates overtime
+      name: argocd-secret
+      namespace: {{install.argocd.namespace}}
+      jsonPointers:
+      - /spec/data
+
+    - group: apps
+      kind: ConfigMap                           # ConfigMap URL
+      name: argocd-cm
+      namespace: {{install.argocd.namespace}}
+      jsonPointers:
+      - /spec/data/url
 
   syncPolicy:
     automated:
